[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/sketchfab/Main.gd" type="Script" id=1]
[ext_resource path="res://addons/sketchfab/HttpImage.gd" type="Script" id=2]
[ext_resource path="res://addons/sketchfab/Paginator.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]

script/source = "tool
extends Control

func _draw():
	draw_rect(get_rect(), Color(1.0, 1.0, 1.0))
"

[node name="Main" type="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Hint", "Margin", "Material", "Rect", "Size Flags", "custom_constants" ]

[node name="Header" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 10
custom_constants/margin_bottom = 6
script = SubResource( 1 )
_sections_unfolded = [ "Material", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="_" type="HBoxContainer" parent="Header" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 8.0
margin_right = 1014.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Logo" type="TextureRect" parent="Header/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 4
stretch_mode = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Logged" type="VBoxContainer" parent="Header/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_top = 5.0
margin_right = 860.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="_2" type="Label" parent="Header/_/Logged" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 196.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "Logged in as"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="_" type="HBoxContainer" parent="Header/_/Logged" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 196.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 8
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="MainBlock" type="VBoxContainer" parent="Header/_/Logged/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 48.0
rect_min_size = Vector2( 140, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 5
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="UserName" type="Label" parent="Header/_/Logged/_/MainBlock" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "User"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Plan" type="Label" parent="Header/_/Logged/_/MainBlock" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 140.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Plan"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Logout" type="Button" parent="Header/_/Logged/_/MainBlock" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 140.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Logout"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Avatar" type="Control" parent="Header/_/Logged/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 148.0
margin_right = 196.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Size Flags" ]
max_size = 256
background = Color( 0, 0, 0, 0 )
immediate = false

[node name="NotLogged" type="VBoxContainer" parent="Header/_" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 864.0
margin_right = 1004.0
margin_bottom = 76.0
rect_min_size = Vector2( 140, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="_" type="Label" parent="Header/_/NotLogged" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "You're not logged in"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="UserName" type="LineEdit" parent="Header/_/NotLogged" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "User"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "custom_colors" ]

[node name="Password" type="LineEdit" parent="Header/_/NotLogged" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 140.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Password"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "custom_colors" ]

[node name="Login" type="Button" parent="Header/_/NotLogged" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 140.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Login"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Search" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 1024.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 2
custom_constants/margin_left = 8
_sections_unfolded = [ "custom_constants" ]

[node name="_" type="VBoxContainer" parent="Search" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 2.0
margin_right = 1016.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="_" type="HBoxContainer" parent="Search/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1008.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_constants" ]

[node name="_" type="Label" parent="Search/_/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Search:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect", "Size Flags" ]

[node name="SearchDomain" type="OptionButton" parent="Search/_/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 146.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Rect", "Size Flags" ]
rect_max_size = Vector2( 120, 0 )


[node name="Text" type="LineEdit" parent="Search/_/_" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0

margin_left = -56.0
margin_right = -56
margin_bottom = 24.0

rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "Size Flags" ]

[node name="Button" type="Button" parent="Search/_/_" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 888.0
margin_top = 2.0
margin_right = 1008.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Search"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_styles" ]

[node name="_3" type="PanelContainer" parent="Search/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1008.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility", "custom_styles" ]

[node name="_" type="HBoxContainer" parent="Search/_/_3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1001.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 14
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="_3" type="HBoxContainer" parent="Search/_/_3/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 312.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="_" type="Label" parent="Search/_/_3/_/_3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 67.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Categories"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Categories" type="MenuButton" parent="Search/_/_3/_/_3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 83.0
margin_right = 312.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Animated" type="CheckBox" parent="Search/_/_3/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 326.0
margin_right = 443.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.75
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Animated"
flat = false
align = 0
_sections_unfolded = [ "Size Flags" ]

[node name="StaffPicked" type="CheckBox" parent="Search/_/_3/_" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 457.0
margin_right = 574.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.75
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Staff-picked"
flat = false
align = 0
_sections_unfolded = [ "Size Flags" ]

[node name="_" type="HBoxContainer" parent="Search/_/_3/_" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 588.0
margin_top = 2.0
margin_right = 744.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 16
alignment = 0

[node name="_" type="Label" parent="Search/_/_3/_/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Sort by"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SortBy" type="OptionButton" parent="Search/_/_3/_/_" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 156.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="_2" type="HBoxContainer" parent="Search/_/_3/_" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 758.0
margin_top = 2.0
margin_right = 994.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="_" type="Label" parent="Search/_/_3/_/_2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 69.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Face count"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FaceCount" type="OptionButton" parent="Search/_/_3/_/_2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 85.0
margin_right = 236.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="_2" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 166.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Paginator" type="ScrollContainer" parent="_2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Size Flags", "Theme" ]

[node name="_" type="VBoxContainer" parent="_2/Paginator" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1008.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ResultsGrid" type="GridContainer" parent="_2/Paginator/_" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1008.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 6
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Trailer" type="VBoxContainer" parent="_2/Paginator/_" index="1"]

modulate = Color( 1, 1, 1, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label" type="Label" parent="_2/Paginator/_/Trailer" index="0"]

size_flags_horizontal = 4
text = "Fetching..."

[node name="CTA" type="Button" parent="_2/Paginator/_/Trailer" index="1"]

disabled=false
size_flags_horizontal = 4
text = "Upgrade to PRO"

[connection signal="pressed" from="Header/_/Logged/_/MainBlock/Logout" to="." method="_on_Logout_pressed"]

[connection signal="text_changed" from="Header/_/NotLogged/UserName" to="." method="_on_any_login_text_changed"]

[connection signal="text_entered" from="Header/_/NotLogged/UserName" to="." method="_on_UserName_text_entered"]

[connection signal="text_changed" from="Header/_/NotLogged/Password" to="." method="_on_any_login_text_changed"]

[connection signal="text_entered" from="Header/_/NotLogged/Password" to="." method="_on_Password_text_entered"]

[connection signal="pressed" from="Header/_/NotLogged/Login" to="." method="_on_Login_pressed"]

[connection signal="text_entered" from="Search/_/_/Text" to="." method="_on_SearchText_text_entered"]

[connection signal="pressed" from="Search/_/_/Button" to="." method="_on_SearchButton_pressed"]

[connection signal="pressed" from="Search/_/_3/_/Animated" to="." method="_on_any_search_trigger_changed"]

[connection signal="pressed" from="Search/_/_3/_/StaffPicked" to="." method="_on_any_search_trigger_changed"]

[connection signal="item_selected" from="Search/_/_3/_/_/SortBy" to="." method="_on_SortBy_item_selected"]

[connection signal="item_selected" from="Search/_/_/SearchDomain" to="." method="_on_SearchDomain_item_selected"]

[connection signal="item_selected" from="Search/_/_3/_/_2/FaceCount" to="." method="_on_FaceCount_item_selected"]


